--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,28 @@
-.row {
-  border: 1px solid black;
+.title {
+  text-align: center;
 }
 
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 5px;
+  background-color: #f1f1f1;
+  cursor: pointer;
+}
+
+.file {
+  display: flex;
+  flex-direction: column;
+  margin: 10px auto;
+  width: 50%;
+  border: 1px solid black;
+  padding: 10px;
+  gap: 5px;
+}
 
 .upload-form {
   display: flex;
